// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-src-paths build should create valid app 1`] = `
SCRIPTS: [
  "/some-static-place/runtime-df7fc58286eea709736e.js",
  "/some-static-place/238-c44c12723ee3f5a90330.js",
  "/some-static-place/main-9dde88520be26c1da379.js",
]
CSS: []
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello custom src paths
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`custom-src-paths build should generate the expected files 1`] = `
{
  "238-c44c12723ee3f5a90330.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "index.html": SCRIPTS: [
    "/some-static-place/runtime-df7fc58286eea709736e.js",
    "/some-static-place/238-c44c12723ee3f5a90330.js",
    "/some-static-place/main-9dde88520be26c1da379.js",
  ]
CSS: []
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello custom src paths
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
  </body>
</html>,
  "main-9dde88520be26c1da379.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-df7fc58286eea709736e.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`custom-src-paths start should start a development server 1`] = `
SCRIPTS: [
  "/runtime.js",
  "/vendors-node_modules_loadable_component_dist_loadable_esm_js-node_modules_pmmmwh_react-refres-773651.js",
  "/main.js",
]
CSS: []
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello custom src paths
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;
